...
                    onClick = onCorrect,
                    style = PrimaryButtonStyle,
                    iconPainter = painterResource(R.drawable.rounded_check_24),
                    actionText = stringResource(R.string.correct),
                    modifier = Modifier
                        .weight(1f)
                        .testTag("ValidationCorrectButton")
                )
                ActionButton(
                    onClick = onAdjust,
                    style = PrimaryButtonStyle,
                    iconPainter = painterResource(R.drawable.rounded_edit_24px),
                    actionText = stringResource(R.string.adjust),
                    modifier = Modifier
                        .weight(1f)
                        .testTag("ValidationAdjustButton"),
                )
            } else {
                Button(
                    onClick = onCancel,
                    style = SecondaryButtonStyle,
                    modifier = Modifier
...
                }
                Button(
                    onClick = onSave,
                    style = PrimaryButtonStyle,
                    modifier = Modifier
                        .weight(1f)
                        .testTag("ValidationAdjustSaveButton")
                ) {
                    Text(stringResource(R.string.save))
                }
            }
        }
    }
...
                .gradientBars(
                    currentEnergy = currentEnergy,
                    adjustedEnergy = adjustedEnergy,
                    colors = gradientColors,
                    cornerShape = cornerShape,
                )
                .testTag("BatteryBar")
        )

        if (!adjusting) return@Box

        val handleSize = DpSize(24.dp, 32.dp)
        val handleShape = RoundedCornerShape(8.dp)
...
